syntax = "proto3";

package dyntrace.proto;

message tracepoint
{
    oneof location
    {
        string symbol = 1;
        uint64 address = 2;
    }
    string name = 3;
}
message tracepoint_list
{
    repeated tracepoint tp = 1;
}
message symbol_list
{
    repeated string sym = 1;
}
message tracepoint_created
{
    string name = 1;
}

message my_pid
{
    int32 pid = 1;
}

message process_list
{
    repeated int32 pids = 1;
}

message status_ok
{
    oneof sub
    {
        process_list procs = 1;
        tracepoint_list tps = 2;
        tracepoint_created tp_created = 3;
        my_pid pid = 4;
        symbol_list sym_list = 5;
    }
}
message status_error
{
    string type = 1;
    string msg = 2;
}

message response
{
    uint64 req_seq = 1;
    oneof status
    {
        status_ok ok = 2;
        status_error err = 3;
    }
}